# lbrc_upload

./: .gitignore  README.md  app.py  config.py  create_test_db.py  dev.py  example.env  live.py  manage.py  manage_dev.py  manage_live.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.dev  requirements.in  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: python-package.yml
alembic/: env.py
alembic/versions/: 0b5baa75372e_unique_user.py  151f1467fe64_add_size_limit_to_study.py  16f39eb10740_upload_audit.py  1fe8bdf14c04_add_size_to_upload_file.py  6feaf93cbad3_uploaddata_audit.py  98cf2878361d_study_audit.py  (+2 more)
cov.html/: index.html  status.json  upload___init___py.html  upload_admin_py.html  upload_database_py.html  upload_emailing_py.html  upload_model_py.html  upload_security_py.html  upload_standard_views_py.html  upload_template_filters_py.html  upload_ui___init___py.html  upload_ui_forms_py.html
cov_html/: index.html  status.json  upload___init___py.html  upload_admin_py.html  upload_database_py.html  upload_emailing_py.html  upload_model_py.html  upload_security_py.html  upload_standard_views_py.html  upload_template_filters_py.html  upload_ui___init___py.html  upload_ui_forms_py.html
deployment/: example.application.cfg  upgrade.sh
lbrc_upload/: __init__.py  admin.py  decorators.py  model.py  security.py
migrations/: migrate.cfg
tests/: __init__.py  conftest.py  faker.py
upload/: __init__.py  admin.py  decorators.py  emailing.py  model.py  security.py  setup.py  standard_views.py  template_filters.py
(+128 files in other folders)
