[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "lbrc_upload"
authors = [
    {name = "Richard Bramley", email = "rabramley@gmail.com"},
]
version = "2.0.1"
requires-python = "== 3.13.*"
readme = "README.md"
classifiers = ["License :: OSI Approved :: MIT License"]

dependencies = [
    "lbrc_flask @ git+https://github.com/LCBRU/lbrc_flask.git",
    "humanize",
]

[tool.hatch.metadata]
allow-direct-references = true